# designer_scrape

./: .gitignore  README.md  Thesis.py  designer_color_scrape.py  pattern.py  pyproject.toml
csv/: chanel.com-handbags  louisvuitton.com-handbags
