[tool.poetry]
name = "pattern"
version = "0.1.0"
description = ""
authors = ["Jonas <40272170+jrByte@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Shapely = "^1.7.1"
numpy = "^1.21.2"
scikit-image = "^0.18.3"
Pillow = "^8.3.1"
Faker = "^8.12.1"
sklearn = "^0.0"
opencv-python = "^4.5.3"
scikit-learn = "^0.24.2"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
mplcursors = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
